; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_exe_dir.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_exe_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exe = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @br_find_exe_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32*, i32** @exe, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @strdup(i8* %10)
  store i8* %11, i8** %2, align 8
  br label %16

12:                                               ; preds = %6
  store i8* null, i8** %2, align 8
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** @exe, align 8
  %15 = call i8* @br_dirname(i32* %14)
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %13, %12, %9
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @br_dirname(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
